--- a/package.json
+++ b/package.json
@@ -41,24 +41,28 @@
     "deepmerge": "^4.3.1",
     "hast-util-is-element": "^3.0.0",
     "hast-util-to-string": "^3.0.0",
+    "json5": "^2.2.3",
     "parse-numeric-range": "^1.3.0",
+    "scule": "^1.1.0",
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@biomejs/biome": "1.3.3",
     "@qnighy/dedent": "^0.1.1",
+    "@types/hast": "^3.0.3",
+    "@types/jsdom": "^21.1.6",
     "bun-plugin-dts": "^0.2.1",
     "bun-types": "^1.0.7",
     "concurrently": "^8.2.2",
     "husky": "^8.0.0",
+    "jsdom": "^22.1.0",
     "lint-staged": "^15.0.2",
-    "rimraf": "^5.0.5",
-    "typescript": "^5.0.0",
-    "vitest": "^0.34.6",
-    "@types/hast": "^3.0.3",
     "rehype-stringify": "^10.0.0",
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
-    "unified": "^11.0.4"
+    "rimraf": "^5.0.5",
+    "typescript": "^5.0.0",
+    "unified": "^11.0.4",
+    "vitest": "^0.34.6"
   }
 }
