--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rehype-custom-code-block",
+  "name": "rehype-custom-code",
   "version": "0.1.0",
   "description": "",
   "keywords": [],
@@ -8,12 +8,12 @@
   "type": "module",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/r4ai/rehype-custom-code-block.git"
+    "url": "git+https://github.com/r4ai/rehype-custom-code.git"
   },
   "bugs": {
-    "url": "https://github.com/r4ai/rehype-custom-code-block/issues"
+    "url": "https://github.com/r4ai/rehype-custom-code/issues"
   },
-  "homepage": "https://github.com/r4ai/rehype-custom-code-block",
+  "homepage": "https://github.com/r4ai/rehype-custom-code",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "types": "dist/esm/index.d.ts",
