--- a/packages/rehype-custom-code/tsconfig.cjs.json
+++ b/packages/rehype-custom-code/tsconfig.cjs.json
@@ -1,8 +1,6 @@
 {
-  "extends": "./tsconfig.json",
+  "extends": "../../tsconfig.cjs.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "moduleResolution": "Node",
     "outDir": "./dist/cjs",
     "rootDir": "./src"
   },
