--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
   ],
   "devDependencies": {
     "bun-types": "latest",
-    "typescript": "^5.0.0",
+    "husky": "^8.0.0",
     "rimraf": "^5.0.5",
-    "husky": "^8.0.0"
+    "turbo": "^1.10.16",
+    "typescript": "^5.0.0"
   }
 }
