--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "husky": "^8.0.0",
     "rimraf": "^5.0.5",
     "turbo": "^1.10.16",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vfile": "^6.0.1"
   }
 }
