--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,5 @@
     "forceConsistentCasingInFileNames": true,
     "types": ["bun-types"]
   },
-  "include": ["./src/**/*", "./tests/**/*"]
+  "include": ["./src/**/*", "./tests/**/*", "./scripts/**/*"]
 }
