--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -31,7 +31,8 @@
     "build:cjs": "tsc -p tsconfig.cjs.json",
     "build:esm": "tsc -p tsconfig.esm.json",
     "prepublishOnly": "bun run build",
-    "check": "bunx @biomejs/biome check --apply ."
+    "check": "bunx @biomejs/biome check --apply .",
+    "docs": "bunx typedoc ./src/**/index.ts"
   },
   "peerDependencies": {
     "shikiji": "^0.8.0 || ^0.9.0"
@@ -59,6 +60,8 @@
     "remark-parse": "^11.0.0",
     "remark-rehype": "^11.0.0",
     "rimraf": "^5.0.5",
+    "typedoc": "^0.25.4",
+    "typedoc-plugin-markdown": "^3.17.1",
     "typescript": "^5.3.2",
     "unified": "^11.0.4",
     "vitest": "^1.0.0"
