--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -1,41 +1,15 @@
 {
   "name": "rehype-custom-code",
-  "version": "0.3.3",
-  "description": "",
-  "keywords": [],
+  "version": "0.4.0",
   "author": "rai",
-  "license": "MIT",
-  "type": "module",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/r4ai/rehype-custom-code.git"
   },
-  "bugs": {
-    "url": "https://github.com/r4ai/rehype-custom-code/issues"
-  },
-  "homepage": "https://github.com/r4ai/rehype-custom-code",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
-  "files": [
-    "src",
-    "dist",
-    "!**/*.test.ts",
-    "!**/*.tsbuildinfo",
-    "README.md",
-    "LICENSE"
-  ],
-  "scripts": {
-    "test": "vitest",
-    "build": "rimraf dist && concurrently 'bun run build:cjs' 'bun run build:esm'",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "prepublishOnly": "bun run build",
-    "check": "bunx @biomejs/biome check --apply .",
-    "docs": "typedoc './src/**/index.ts'"
-  },
   "peerDependencies": {
-    "shikiji": "0.10.2"
+    "shiki": "^1.1.7"
   },
   "dependencies": {
     "deepmerge": "^4.3.1",
@@ -65,5 +39,31 @@
     "typescript": "^5.3.2",
     "unified": "^11.0.4",
     "vitest": "^1.0.0"
-  }
+  },
+  "bugs": {
+    "url": "https://github.com/r4ai/rehype-custom-code/issues"
+  },
+  "description": "",
+  "files": [
+    "src",
+    "dist",
+    "!**/*.test.ts",
+    "!**/*.tsbuildinfo",
+    "README.md",
+    "LICENSE"
+  ],
+  "homepage": "https://github.com/r4ai/rehype-custom-code",
+  "keywords": [],
+  "license": "MIT",
+  "scripts": {
+    "test": "vitest",
+    "build": "rimraf dist && concurrently 'bun run build:cjs' 'bun run build:esm'",
+    "build:cjs": "tsc -p tsconfig.cjs.json",
+    "build:esm": "tsc -p tsconfig.esm.json",
+    "prepublishOnly": "bun run build",
+    "check": "bun x @biomejs/biome check --apply .",
+    "docs": "typedoc './src/**/index.ts'"
+  },
+  "type": "module",
+  "types": "dist/esm/index.d.ts"
 }
