--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "packages/*"
   ],
   "devDependencies": {
-    "bun-types": "latest",
+    "@types/bun": "latest",
     "husky": "^9.0.0",
     "rimraf": "^5.0.5",
     "turbo": "^1.10.16",
