--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -25,8 +25,8 @@
     "@qnighy/dedent": "^0.1.1",
     "@types/hast": "^3.0.3",
     "@types/jsdom": "^21.1.6",
+    "@types/bun": "^1.0.14",
     "bun-plugin-dts": "^0.2.1",
-    "bun-types": "^1.0.14",
     "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.1.0",
