--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "deepmerge": "^4.3.1",
     "hast-util-is-element": "^3.0.0",
-    "hast-util-to-string": "^3.0.0",
+    "hast-util-to-text": "^4.0.2",
     "json5": "^2.2.3",
     "parse-numeric-range": "^1.3.0",
     "scule": "^1.1.0",
