--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -1,13 +1,43 @@
 {
   "name": "rehype-custom-code",
   "version": "0.4.0",
+  "description": "",
   "author": "rai",
+  "license": "MIT",
+  "keywords": [],
+  "homepage": "https://github.com/r4ai/rehype-custom-code",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/r4ai/rehype-custom-code.git"
   },
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
+  "bugs": {
+    "url": "https://github.com/r4ai/rehype-custom-code/issues"
+  },
+  "type": "module",
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "import": "./dist/index.js"
+    }
+  },
+  "files": [
+    "src",
+    "dist",
+    "!**/*.test.ts",
+    "!**/*.tsbuildinfo",
+    "README.md",
+    "LICENSE"
+  ],
+  "engines": {
+    "node": ">=16"
+  },
+  "scripts": {
+    "test": "vitest",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
+    "prepublishOnly": "bun run build",
+    "check": "bun x @biomejs/biome check --apply .",
+    "docs": "typedoc './src/**/index.ts'"
+  },
   "peerDependencies": {
     "shiki": "^1.1.7"
   },
@@ -23,11 +53,11 @@
   "devDependencies": {
     "@biomejs/biome": "1.5.3",
     "@qnighy/dedent": "^0.1.1",
+    "@tsconfig/node16": "^16.1.3",
+    "@types/bun": "^1.0.14",
     "@types/hast": "^3.0.3",
     "@types/jsdom": "^21.1.6",
-    "@types/bun": "^1.0.14",
     "bun-plugin-dts": "^0.2.1",
-    "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.1.0",
     "rehype-stringify": "^10.0.0",
@@ -39,31 +69,5 @@
     "typescript": "^5.3.2",
     "unified": "^11.0.4",
     "vitest": "^1.0.0"
-  },
-  "bugs": {
-    "url": "https://github.com/r4ai/rehype-custom-code/issues"
-  },
-  "description": "",
-  "files": [
-    "src",
-    "dist",
-    "!**/*.test.ts",
-    "!**/*.tsbuildinfo",
-    "README.md",
-    "LICENSE"
-  ],
-  "homepage": "https://github.com/r4ai/rehype-custom-code",
-  "keywords": [],
-  "license": "MIT",
-  "scripts": {
-    "test": "vitest",
-    "build": "rimraf dist && concurrently 'bun run build:cjs' 'bun run build:esm'",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
-    "prepublishOnly": "bun run build",
-    "check": "bun x @biomejs/biome check --apply .",
-    "docs": "typedoc './src/**/index.ts'"
-  },
-  "type": "module",
-  "types": "dist/esm/index.d.ts"
+  }
 }
