--- a/packages/remark-meta-string/package.json
+++ b/packages/remark-meta-string/package.json
@@ -27,9 +27,7 @@
   ],
   "scripts": {
     "test": "vitest",
-    "build": "rimraf dist && concurrently 'bun run build:cjs' 'bun run build:esm'",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:esm": "tsc -p tsconfig.esm.json",
+    "build": "rimraf dist && tsc -p tsconfig.build.json",
     "prepublishOnly": "bun run build",
     "check": "bun x @biomejs/biome check --apply ."
   },
@@ -44,7 +42,6 @@
     "@types/jsdom": "^21.1.6",
     "@types/mdast": "^4.0.3",
     "bun-types": "^1.0.14",
-    "concurrently": "^8.2.2",
     "jsdom": "^24.0.0",
     "lint-staged": "^15.1.0",
     "rehype-stringify": "^10.0.0",
