--- a/packages/remark-meta-string/tsconfig.json
+++ b/packages/remark-meta-string/tsconfig.json
@@ -1,8 +1,3 @@
 {
-  "extends": "../../tsconfig.json",
-  "compilerOptions": {
-    "outDir": "./dist"
-  },
-  "include": ["./src/**/*.ts"],
-  "exclude": ["./src/**/*.test.ts", "./src/**/*.spec.ts"]
+  "extends": "../../tsconfig.json"
 }
