--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "module": "index.ts",
   "type": "module",
   "scripts": {
-    "build": "bun run --cwd packages/rehype-custom-code",
+    "build": "bun run turbo build",
+    "test": "bun run turbo test",
     "docs": "bun run ./scripts/docs.ts",
     "check": "bun x @biomejs/biome check --apply .",
-    "prepare": "husky install"
+    "changeset": "changeset",
+    "release": "bun run build && bun run test && bun run changeset publish",
+    "prepare": "husky install",
+    "prepublishOnly": "bun run build"
   },
   "workspaces": [
     "packages/*"
   ],
   "devDependencies": {
+    "@changesets/changelog-github": "^0.5.0",
+    "@changesets/cli": "^2.27.1",
     "@types/bun": "latest",
     "husky": "^9.0.0",
     "rimraf": "^5.0.5",
