--- a/turbo.json
+++ b/turbo.json
@@ -2,9 +2,15 @@
   "$schema": "https://turbo.build/schema.json",
   "pipeline": {
     "build": {
-      "outputs": ["dist/**"]
+      "outputs": [
+        "dist/**"
+      ]
     },
-    "test": {},
-    "check": {}
+    "test": {
+      "cache": false
+    },
+    "check": {
+      "cache": false
+    }
   }
 }
