--- a/packages/rehype-custom-code/package.json
+++ b/packages/rehype-custom-code/package.json
@@ -44,6 +44,7 @@
   "dependencies": {
     "deepmerge": "^4.3.1",
     "hast-util-is-element": "^3.0.0",
+    "hast-util-to-string": "^3.0.0",
     "hast-util-to-text": "^4.0.2",
     "json5": "^2.2.3",
     "parse-numeric-range": "^1.3.0",
@@ -51,6 +52,7 @@
     "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
+    "shiki": "^1.1.7",
     "@biomejs/biome": "1.5.3",
     "@qnighy/dedent": "^0.1.1",
     "@tsconfig/node16": "^16.1.3",
