chore: use mise to setup bun

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -31,15 +31,14 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - uses: oven-sh/setup-bun@v1
-        with:
-          bun-version: latest
+      - name: Setup Node.js and Bun
+        uses: jdx/mise-action@v2
       - run: bun install --frozen-lockfile
       - run: bun run docs
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: './docs'
+          path: "./docs"
       - name: Setup Pages
         uses: actions/configure-pages@v4
       - name: Deploy to GitHub Pages
