fix: entry path

--- a/packages/remark-meta-string/package.json
+++ b/packages/remark-meta-string/package.json
@@ -14,9 +14,9 @@
     "url": "https://github.com/r4ai/rehype-custom-code/issues"
   },
   "homepage": "https://github.com/r4ai/rehype-custom-code",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/esm/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
   "files": [
     "src",
     "dist",
